NGFLUI_Vikram_Slave.cydsn/REBUILD.log
--------------- Rebuild Started: 05/15/2019 09:12:24 Project: NGFLUI_Vikram_Slave, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\NGFLUI_Vikram_Slave.cycdx"
Deleting file ".\NGFLUI_Vikram_Slave.rpt"
cydsfit.exe -.appdatapath "C:\Users\220036621\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\GEA_Cypress_proj\NGFLUI.cywrk.Archive01\NGFLUI\NGFLUI_Vikram_Slave.cydsn\NGFLUI_Vikram_Slave.cyprj -d CY8C4025LQI-S411 -s C:\GEA_Cypress_proj\NGFLUI.cywrk.Archive01\NGFLUI\NGFLUI_Vikram_Slave.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0p\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:72:39: error: 'CapSense_dsRam' undeclared (first use in this function)
          EZI2C_EzI2CSetBuffer1(sizeof(CapSense_dsRam), sizeof(CapSense_dsRam),(uint8 *)&CapSense_dsRam);
                                       ^
main.c:72:39: note: each undeclared identifier is reported only once for each function it appears in
main.c:81:2: warning: implicit declaration of function 'CapSense_Start' [-Wimplicit-function-declaration]
  CapSense_Start(); /* Initialize component */
  ^
main.c:139:2: warning: implicit declaration of function 'CapSense_ScanAllWidgets' [-Wimplicit-function-declaration]
  CapSense_ScanAllWidgets(); /* Scan all widgets */
  ^
main.c:141:8: warning: implicit declaration of function 'CapSense_IsBusy' [-Wimplicit-function-declaration]
  while(CapSense_IsBusy()); /* wait for scan to complete */
        ^
main.c:145:2: warning: implicit declaration of function 'CapSense_InitializeAllBaselines' [-Wimplicit-function-declaration]
  CapSense_InitializeAllBaselines(); /* re-initialize baselines before starting forever loop */
  ^
main.c:155:17: error: 'CapSense_NOT_BUSY' undeclared (first use in this function)
         while(!(CapSense_NOT_BUSY == CapSense_IsBusy()))
                 ^
main.c:159:9: warning: implicit declaration of function 'CapSense_ProcessAllWidgets' [-Wimplicit-function-declaration]
         CapSense_ProcessAllWidgets();
         ^
main.c:162:4: warning: implicit declaration of function 'CapSense_RunTuner' [-Wimplicit-function-declaration]
    CapSense_RunTuner(); /* To sync with Tuner application */
    ^
main.c:166:6: warning: implicit declaration of function 'CapSense_IsAnyWidgetActive' [-Wimplicit-function-declaration]
   if(CapSense_IsAnyWidgetActive())
      ^
main.c:173:12: error: 'CapSense_BUTTON0_WDGT_ID' undeclared (first use in this function)
    for(i = CapSense_BUTTON0_WDGT_ID; i < CapSense_TOTAL_CSD_WIDGETS; i++)
            ^
main.c:173:42: error: 'CapSense_TOTAL_CSD_WIDGETS' undeclared (first use in this function)
    for(i = CapSense_BUTTON0_WDGT_ID; i < CapSense_TOTAL_CSD_WIDGETS; i++)
                                          ^
main.c:175:8: warning: implicit declaration of function 'CapSense_IsWidgetActive' [-Wimplicit-function-declaration]
     if(CapSense_IsWidgetActive(i))
        ^
main.c:49:7: warning: unused variable 'printBuf' [-Wunused-variable]
  char printBuf[60]; /* buffer used for sprintf */
       ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/15/2019 09:12:38 ---------------
